# SuDoer

./: .env.example  .gitignore  README.md  pyproject.toml
apps/cli/: client.py  main.py  stream_handler.py
apps/daemon/: main.py
apps/daemon/api/: ws.py
apps/daemon/services/: pty_manager.py
core/: settings.py
core/configs/: settings.py
core/enums/: __init__.py  model_provider.py  transport_enums.py
core/factories/: models.py
core/graph/: __init__.py  executor.py  state.py
core/pty/: ansi.py  persistent.py
core/security/: validator.py
core/transport/: messages.py
